--- a/TempEngine/TempEngine.vcxproj.filters
+++ b/TempEngine/TempEngine.vcxproj.filters
@@ -255,6 +255,7 @@
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="LightManager.cpp" />
+    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AABB2.hpp">
@@ -526,6 +527,7 @@
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="LightManager.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Math">
