--- a/TempEngine/TempEngine.vcxproj.filters
+++ b/TempEngine/TempEngine.vcxproj.filters
@@ -256,6 +256,8 @@
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Viewport.cpp" />
+    <ClCompile Include="Vector4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AABB2.hpp">
@@ -528,6 +530,7 @@
     <ClInclude Include="Light.h" />
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Viewport.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Math">
